Fixed bug with confirmationToast not showing when removing items from cart. Added style for confirmationToast when removing items from cart.

--- a/src/styles/elements/confirmationToast.module.css
+++ b/src/styles/elements/confirmationToast.module.css
@@ -17,6 +17,12 @@
   border-left: 4px solid var(--toast-add-accent);
 }
 
+.remove {
+  background-color: var(--toast-remove-bg);
+  color: var(--warm-cream);
+  border-left: 4px solid var(--toast-remove-accent);
+}
+
 .show {
   display: block;
   animation:
